# survive

./: CmakeLists.txt  README.md
learning/: README.md  cmake.md  git.md  mockcpp.md  ruler.md  vscode.md
platform/: README.md
platform/fake_boost/: fake_boost.h
platform/fake_boost/config/: general.h  platdef.h
platform/fake_boost/type/: typeof.h  typetools.h
src/: README.md
src/animal/: CMakeLists.txt  animal.c  animal.h  animal_all.c  animal_all.h
src/base/: CMakeLists.txt  base.h  check.h  debug.c  debug.h  errcode.h  ini_cfg.c  ini_cfg.h  oprate.h  type.h
src/func/: func.c  func.h
src/map/: CMakeLists.txt  map.c  map.h  map_data.c  map_data.h  map_ini_cfg.c  map_ini_cfg.h
src/project1/: main.c
src/project2/: CMakeLists.txt  main.c
src/rule/: CMakeLists.txt  rule.c  rule.h
test/: CMakeLists.txt  README.md  example_add.cpp  example_subtract.cpp
test/animal/: CMakeLists.txt  cfg.ini  cfg_only.ini  unittest_animal.cpp
test/base/: CMakeLists.txt  cfg.ini  unittest_base.cpp  unittest_base_debug.cpp  unittest_base_ini_cfg.cpp
test/map/: CMakeLists.txt  cfg.ini  unittest_map.cpp
test/rule/: CMakeLists.txt  cfg.ini  unittest_rule.cpp
